<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/repository_id_text_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/rounded_repository">


    <ImageView
        android:id="@+id/user_avatar_for_repository_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/user_name_for_repository_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_avatar_for_repository_detail"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar_for_repository_detail" />

    <TextView
        android:id="@+id/repository_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/user_avatar_for_repository_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_repository_id_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/repository_id"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repository_name_detail" />

    <TextView
        android:id="@+id/view_repository_id_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/view_repository_id_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/repository_name_detail" />

    <TextView
        android:id="@+id/view_html_url_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/repository_htm_url"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_repository_id_text_detail" />

    <TextView
        android:id="@+id/view_html_url_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/view_html_url_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/view_repository_id_text_detail" />

    <TextView
        android:id="@+id/view_language_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/language"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_html_url_text_detail" />

    <TextView
        android:id="@+id/view_language_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/view_language_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/view_html_url_text_detail" />

    <TextView
        android:id="@+id/view_created_at_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_at"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_language_text_detail" />

    <TextView
        android:id="@+id/view_created_at_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/view_created_at_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/view_language_text_detail" />

    <TextView
        android:id="@+id/view_updated_at_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/update_at"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_created_at_text_detail" />

    <TextView
        android:id="@+id/view_updated_at_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/view_updated_at_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/view_created_at_text_detail" />

    <ImageView
        android:id="@+id/repository_star_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_border_24"
        tools:ignore="ContentDescription"
        android:focusable="true" />

    <TextView
        android:id="@+id/stars_count_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:textColor="#F4F40B"
        app:layout_constraintStart_toEndOf="@+id/repository_star_detail"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>